<resources>
    <string name="app_name">wuyeguanli</string>
    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_name">姓名</string>
    <string name="prompt_address">住址</string>
    <string name="prompt_password_again">再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">请填写11位手机号</string>
    <string name="error_invalid_password">密码必须大于4位</string>
    <string name="login_success">密码必须大于4位</string>
    <string name="error_incorrect_password">账号或密码错误</string>
    <string name="error_field_required">手机号不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="go_login">已有账号去登录</string>
    <string name="go_register">没有账号去注册</string>
</resources>
